--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-
+# Это комментарий
+# Игнорировать все файлы с расширением .log
+.log
+# Игнорировать директорию "node_modules" и ee содержимое
+node_modules/
+# Игнорировать файл .env
+.env
+# Игнорировать все файлы в директории "temp", но не саму директорию
+temp/*
